jenkins file added

--- a/src/main/resources/templates/product.html
+++ b/src/main/resources/templates/product.html
@@ -63,8 +63,8 @@
                         <label class="btn btn-outline-primary">Food</label>
                         <input type="radio" class="btn-check" id="drink" name="type" value="Drink" required>
                         <label class="btn btn-outline-primary">Drink</label>
-                        <input type="radio" class="btn-check" id="other" name="type" value="Other" required>
-                        <label class="btn btn-outline-primary">Other</label>
+<!--                        <input type="radio" class="btn-check" id="other" name="type" value="Other" required>-->
+<!--                        <label class="btn btn-outline-primary">Other</label>-->
                     </div>
 
                     <div class="form-group">
