--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -77,7 +77,7 @@
   <main class="form-signin w-100 m-auto">
 
     <img class="mb-4" src="/img/logo.jpeg" alt="" width="100" height="100">
-    <h1 class="h3 mb-3 fw-normal">Molvena Lake Resort Restaurant</h1>
+    <h1 class="h3 mb-3 fw-normal">Molveno Lake Resort Restaurant</h1>
     <div class="alert alert-danger" role="alert" id="passwordsNoMatchRegister">
       <span>
         <p>Username/Password is incorrect!</p>
@@ -92,7 +92,7 @@
       <label for="password">Password</label>
     </div>
     <button class="w-100 btn btn-lg btn-primary" type="button" id="login-system">Login</button>
-    <p class="mt-5 mb-3 text-muted">&copy; Molvena Lake Resort Restaurant</p>
+    <p class="mt-5 mb-3 text-muted">&copy; Molveno Lake Resort Restaurant</p>
   </form>
   </main>
   </body>
